src/main/java/org/example/utils/error/IngredientException.java
package org.example.utils.error;

public class IngredientException extends RuntimeException {
    public IngredientException(Throwable cause) {
        super(cause);
    }
}
